# space-invaders

./: .gitignore  README.md  SpaceInvaders.py  pyproject.toml  space-invaders.pyxres
src/space_invaders.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/spaceinvaders/: SpaceInvaders.py  SpaceInvaders.py.old  __init__.py  __main__.py  animation.py  game_mode.py  horizontal_speed.py  invader.py  invader_explosion.py  invader_projectile.py  invader_weapon.py  life_bar.py  menu_mode.py  meta_singleton.py  path.py  projectile.py  quit_mode.py  rocket.py  rocket_explosion.py  rocket_projectile.py  rocket_weapon.py  root.py  sprite.py  sprite_manager.py  star.py  ufo.py  vector.py  vertical_speed.py  weapon.py
src/spaceinvaders/graphics/: space-invaders.pyxres
