[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "space-invaders"
version = "0.0.1"
authors = [
  { name="c4r4puce" },
]
description = "Space Invaders written in Python with Pyxel "
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyxel",
]

[project.urls]
"Homepage" = "https://github.com/c4r4puce/space-invaders"
"Bug Tracker" = "https://github.com/c4r4puce/space-invaders/issues"

[project.scripts]
space-invaders = "spaceinvaders.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["spaceinvaders*"]

[tool.setuptools.package-data]
"spaceinvaders.graphics" = ["*.pyxres"]